--- a/styles/services.css
+++ b/styles/services.css
@@ -26,7 +26,7 @@
   top: 6rem;
 }
 
-.services-card.dark {
+body.dark .services-card {
   background-color: var(--primary-dark);
 }
 
@@ -66,29 +66,20 @@
   background-color: var(--secondary);
 }
 
-.services-card.dark:nth-of-type(1) > .services-header > .services-header-icon {
+body.dark .services-card:nth-of-type(1) > .services-header > .services-header-icon {
   background-color: var(--green);
 }
 
-.services-card.dark:nth-of-type(2) > .services-header > .services-header-icon {
+body.dark .services-card:nth-of-type(2) > .services-header > .services-header-icon {
   background-color: var(--blue);
 }
 
-.services-card.dark:nth-of-type(3) > .services-header > .services-header-icon {
+body.dark .services-card:nth-of-type(3) > .services-header > .services-header-icon {
   background-color: var(--magenta);
 }
 
-.services-card.dark:nth-of-type(4) > .services-header > .services-header-icon {
+body.dark .services-card:nth-of-type(4) > .services-header > .services-header-icon {
   background-color: var(--secondary-dark);
-}
-
-.services-header-icon > svg > path {
-  fill: var(--black);
-  transition: fill var(--default-transition);
-}
-
-.services-card.dark .services-header-icon > svg > path {
-  fill: var(--white);
 }
 
 .services-header-title {
@@ -99,53 +90,6 @@
   );
   font-weight: 600;
   margin-bottom: 0;
-}
-
-.services-text p {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.services-text p::before {
-  content: "";
-  display: block;
-  width: 0.5rem;
-  aspect-ratio: 1 / 1;
-  border-radius: var(--rounded-50);
-  transition: background-color var(--default-transition);
-}
-
-.services-card:nth-of-type(1) > .services-text p::before {
-  background-color: var(--light-green);
-}
-
-.services-card:nth-of-type(2) > .services-text p::before {
-  background-color: var(--light-blue);
-}
-
-.services-card:nth-of-type(3) > .services-text p::before {
-  background-color: var(--light-purple);
-}
-
-.services-card:nth-of-type(4) > .services-text p::before {
-  background-color: var(--secondary);
-}
-
-.services-card.dark:nth-of-type(1) > .services-text p::before {
-  background-color: var(--green);
-}
-
-.services-card.dark:nth-of-type(2) > .services-text p::before {
-  background-color: var(--blue);
-}
-
-.services-card.dark:nth-of-type(3) > .services-text p::before {
-  background-color: var(--magenta);
-}
-
-.services-card.dark:nth-of-type(4) > .services-text p::before {
-  background-color: var(--secondary-dark);
 }
 
 .services-button {
